Fix dropdown on smallest size

--- a/style.css
+++ b/style.css
@@ -294,13 +294,16 @@ a.project-button-link:hover {
 
 /* For small screen break point */
 @media only screen and (max-width: 895px) {
+    .flex-head {
+        width: 200px;
+    }
+
     .site-header {
         position: relative;
         display: block;
         float: right;
-        width: 150px;
+        width: 120px;
         text-align: center;
-        padding-left: 300px;
     }
 
     #site-head-1 {
@@ -362,7 +365,7 @@ a.project-button-link:hover {
     .brief-intro {
         width: 100%;
         margin: auto;
-        padding: 20px;
+        padding: 20px 20px 50px 20px;
     }
 
     .selfie-box {
